Uhuru-av-Windows :: Add Communication with the scan service

--- a/VS/UhuruAV/UhuruGuard Package/UhuruGuard Package.vcxproj
+++ b/VS/UhuruAV/UhuruGuard Package/UhuruGuard Package.vcxproj
@@ -322,6 +322,14 @@
   </PropertyGroup>
   <ItemGroup>
     <FilesToPackage Include="@(Inf->'%(CopyOutput)')" Condition="'@(Inf)'!=''" />
+    <FilesToPackage Include="C:\Users\david\Documents\Visual Studio 2013\Projects\Bouchons\Release\ClientConnect.exe" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Windows\System32\msvcr120.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\UhuruGuard\UhuruGuard.vcxproj">
