--- a/libuhuru/include/libuhuru/Makefile.am
+++ b/libuhuru/include/libuhuru/Makefile.am
@@ -1,6 +1,5 @@
 pkginclude_HEADERS= \
-core.h \
-ipc.h 
+core.h 
 
 nobase_pkginclude_HEADERS= \
 common/action.h \
@@ -8,5 +7,4 @@ common/status.h \
 libcore/handle.h \
 libcore/info.h \
 libcore/module.h \
-libcore/scan.h \
-libipc/ipc.h 
+libcore/scan.h 
