--- a/libuhuru/src/linux/daemon/Makefile.am
+++ b/libuhuru/src/linux/daemon/Makefile.am
@@ -19,7 +19,7 @@ unixsock.c \
 unixsock.h \
 tcpsock.c \
 tcpsock.h \
-../utils/getopt.c \
-../utils/getopt.h 
+../../utils/getopt.c \
+../../utils/getopt.h 
 
 EXTRA_DIST=uhuru-scan-daemon.desktop
