command line scan working again with unix socket

--- a/libuhuru/include/libuhuru/Makefile.am
+++ b/libuhuru/include/libuhuru/Makefile.am
@@ -4,6 +4,7 @@ core.h
 nobase_pkginclude_HEADERS= \
 common/action.h \
 common/status.h \
+libcore/error.h \
 libcore/handle.h \
 libcore/info.h \
 libcore/module.h \
