--- a/libuhuru/pkgconfig/libuhuru.pc.in
+++ b/libuhuru/pkgconfig/libuhuru.pc.in
@@ -9,5 +9,5 @@ Name: UHURU library
 Description: UHURU library
 Version: ${version} 
 Requires: gmodule-2.0 glib-2.0 libxml-2.0
-Libs:-L${libdir} -lmagic
+Libs:-L${libdir} -luhuru_core -lmagic
 Cflags: -I${includedir} 
