Uhuru-av-Windows :: Communication between driver and user-mode app :: Send a scan order and receive the result.

--- a/VS/UhuruAV/ScanClient/ScanClient.vcxproj
+++ b/VS/UhuruAV/ScanClient/ScanClient.vcxproj
@@ -11,9 +11,9 @@
     </ProjectConfiguration>
   </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{BDB70B28-0B54-405C-87AE-ABDFC9CE7795}</ProjectGuid>
+    <ProjectGuid>{7452772C-0C0A-403F-9D78-927B46F67992}</ProjectGuid>
     <Keyword>Win32Proj</Keyword>
-    <RootNamespace>UhuruSvc</RootNamespace>
+    <RootNamespace>ScanClient</RootNamespace>
   </PropertyGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.Default.props" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'" Label="Configuration">
@@ -57,7 +57,7 @@
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Wtsapi32.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalDependencies>FltLib.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -79,10 +79,10 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="service.c" />
+    <ClCompile Include="client.c" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="service.h" />
+    <ClInclude Include="client.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
