--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,8 @@ VS/UhuruAV/UhuruGuard Package/x64/Win7Debug/*
 VS/UhuruAV/UhuruGuard/x64/*
 VS/UhuruAV/x64/*
 VS/UhuruAV/UhuruSvc/Debug/*
+VS/UhuruAV/UhuruGuard/Win7Debug/*
+VS/UhuruAV/ScanClient/Debug/*
+VS/UhuruAV/ScanClient/x64/*
+VS/UhuruAV/UhuruGuard Package/Win7Debug/*
+VS/UhuruAV/Win7Debug/*
