--- a/libuhuru/conf/uhuru.conf
+++ b/libuhuru/conf/uhuru.conf
@@ -4,6 +4,7 @@ mime-type="application/pdf"; clamav
 mime-type="application/x-dosexec"; clamav; module5_2
 mime-type="application/x-executable"; module5_2; clamav
 mime-type="application/x-msdos-program"; module5_2; clamav
+mime-type="application/x-msdownload"; module5_2; clamav
 mime-type="application/x-object"; module5_2; clamav
 mime-type="application/x-sharedlib"; module5_2; clamav
 # clamav scans every file if no other module applies
