--- a/libuhuru/tests/Makefile.am
+++ b/libuhuru/tests/Makefile.am
@@ -1,15 +1,16 @@
+AUTOMAKE_OPTIONS=subdir-objects
 
 #check_PROGRAMS=testfind1 testuhuru1 testuhuruscan1 testxmlreport1 testprotocol1 testprotocol2
 check_PROGRAMS=testuhuru1 testuhuruscan1 testxmlreport1 testconfparser1 testipcreceive1 testipcsend1 testdir1
 
 AM_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src @GMODULE2_CFLAGS@ @LIBXML2_CFLAGS@
-LDADD=$(top_builddir)/src/lib/libuhuru.la @GMODULE2_LIBS@ @LIBXML2_LIBS@ -lmagic
+LDADD=$(top_builddir)/src/libcore/libuhuru_core.la @GMODULE2_LIBS@ @LIBXML2_LIBS@ -lmagic
 testuhuru1_SOURCES=testuhuru1.c
 testuhuruscan1_SOURCES=testuhuruscan1.c
 testxmlreport1_SOURCES=testxmlreport1.c
 testconfparser1_SOURCES=testconfparser1.c
-testipcsend1_SOURCES=testipcsend1.c
-testipcreceive1_SOURCES=testipcreceive1.c
+testipcsend1_SOURCES=testipcsend1.c ../src/linux/daemon/ipc.c ../src/linux/daemon/ipc.h
+testipcreceive1_SOURCES=testipcreceive1.c ../src/linux/daemon/ipc.c ../src/linux/daemon/ipc.h
 testdir1_SOURCES=testdir1.c
 
 #testfind1_SOURCES=testfind1.c
