--- a/VS/UhuruAV/UhuruGuard Package/UhuruGuard Package.vcxproj
+++ b/VS/UhuruAV/UhuruGuard Package/UhuruGuard Package.vcxproj
@@ -322,11 +322,104 @@
   </PropertyGroup>
   <ItemGroup>
     <FilesToPackage Include="@(Inf->'%(CopyOutput)')" Condition="'@(Inf)'!=''" />
+    <FilesToPackage Include="C:\clamdeps\win32\openssl\lib\libeay32.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\clamdeps\win32\openssl\lib\ssleay32.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\libuhuru\conf\uhuru.conf" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>conf</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\clamav.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>modules</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\clamav_test_file" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\intl.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libclamav.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libglib-2.0-0.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libgmodule-2.0-0.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libgobject-2.0-0.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libgthread-2.0-0.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libiconv2.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libuhuru_core.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\clamav\bytecode.cvd" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>modules\DB\clamav</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\clamav\main.cvd" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>modules\DB\clamav</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\database_1.dat" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\database_2.dat" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\Database_malsain_1.zip" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\Database_malsain_2.zip" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\Database_sain_1.zip" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\DBI_inf.dat" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\DBI_sain.dat" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\module_5_2.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\ScanClient.exe" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
     <FilesToPackage Include="C:\Users\david\Documents\Visual Studio 2013\Projects\Bouchons\Release\ClientConnect.exe" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
       <PackageRelativeDirectory>
       </PackageRelativeDirectory>
     </FilesToPackage>
+    <FilesToPackage Include="C:\Windows\System32\msvcp120d.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
     <FilesToPackage Include="C:\Windows\System32\msvcr120.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+      <PackageRelativeDirectory>
+      </PackageRelativeDirectory>
+    </FilesToPackage>
+    <FilesToPackage Include="C:\Windows\System32\msvcr120d.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
       <PackageRelativeDirectory>
       </PackageRelativeDirectory>
     </FilesToPackage>
