--- a/gui/qt/icons/Makefile.am
+++ b/gui/qt/icons/Makefile.am
@@ -2,8 +2,10 @@ icondir=$(datarootdir)/icons/hicolor/scalable/apps
 
 icon_DATA= \
         uhuru_white.svg \
-        uhuru_grey.svg
+        uhuru_grey.svg \
+	clamav.ico
 
 EXTRA_DIST= \
         uhuru_white.svg \
-        uhuru_grey.svg
+        uhuru_grey.svg \
+	clamav.ico
