--- a/gui/qt/icons/Makefile.am
+++ b/gui/qt/icons/Makefile.am
@@ -1,11 +1,5 @@
-icondir=$(datarootdir)/icons/hicolor/scalable/apps
-
-icon_DATA= \
-        uhuru_white.svg \
-        uhuru_grey.svg \
-	clamav.ico
-
 EXTRA_DIST= \
-        uhuru_white.svg \
+	clamav.ico \
+	uhuru_am.png \
         uhuru_grey.svg \
-	clamav.ico
+        uhuru_white.svg 
