Ajout dossier de scripts d'automatisation, configurés pour utiliser ./out

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,4 @@ VS/UhuruAV/ScanClient/Debug/*
 VS/UhuruAV/ScanClient/x64/*
 VS/UhuruAV/UhuruGuard Package/Win7Debug/*
 VS/UhuruAV/Win7Debug/*
+out/
