--- a/libuhuru/src/linux/daemon/Makefile.am
+++ b/libuhuru/src/linux/daemon/Makefile.am
@@ -2,6 +2,7 @@ AUTOMAKE_OPTIONS=subdir-objects
 
 sbin_PROGRAMS=uhuru-scand
 
+AM_CPPFLAGS= -DG_LOG_DOMAIN='"uhuru"'
 uhuru_scand_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/include/config -I$(top_srcdir)/src @GLIB2_CFLAGS@ @GIO2_CFLAGS@ @GTHREAD2_CFLAGS@
 uhuru_scand_LDADD=$(top_builddir)/src/libcore/libuhuru_core.la @GLIB2_LIBS@ @GIO2_LIBS@ @GTHREAD2_LIBS@ -lmagic
 
@@ -11,6 +12,8 @@ client.c \
 client.h \
 ipc.c \
 ipc.h \
+log.c \
+log.h \
 server.c \
 server.h \
 daemonize.c \
