Ajout dans /etc/default -- no fixed yet

--- a/libuhuru/src/linux/service/Makefile.am
+++ b/libuhuru/src/linux/service/Makefile.am
@@ -1,2 +1,5 @@
 init_ddir = $(sysconfdir)/init.d
 dist_init_d_SCRIPTS = uhuru-scand
+
+defaultdir = $(sysconfdir)/default
+dist_default_DATA = uhuru-scand-def
