Uhuru-av-Windows :: fix crash during scan + Scan file on cleanup operation + delete file context before the file is deleted + add UhuruSetup project.

--- a/VS/UhuruAV/UhuruGuard Package/UhuruGuard Package.vcxproj
+++ b/VS/UhuruAV/UhuruGuard Package/UhuruGuard Package.vcxproj
@@ -368,11 +368,11 @@
       <PackageRelativeDirectory>
       </PackageRelativeDirectory>
     </FilesToPackage>
-    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libuhuru.pdb" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libuhuru_core.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
       <PackageRelativeDirectory>
       </PackageRelativeDirectory>
     </FilesToPackage>
-    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libuhuru_core.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
+    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\libuhuru_core.pdb" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
       <PackageRelativeDirectory>
       </PackageRelativeDirectory>
     </FilesToPackage>
@@ -381,27 +381,6 @@
     </FilesToPackage>
     <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\clamav\main.cvd" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
       <PackageRelativeDirectory>modules\DB\clamav</PackageRelativeDirectory>
-    </FilesToPackage>
-    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\database_1.dat" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
-      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
-    </FilesToPackage>
-    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\database_2.dat" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
-      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
-    </FilesToPackage>
-    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\Database_malsain_1.zip" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
-      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
-    </FilesToPackage>
-    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\Database_malsain_2.zip" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
-      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
-    </FilesToPackage>
-    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\Database_sain_1.zip" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
-      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
-    </FilesToPackage>
-    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\DBI_inf.dat" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
-      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
-    </FilesToPackage>
-    <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\modules\DB\module5_2\windows\DBI_sain.dat" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
-      <PackageRelativeDirectory>modules\DB\module5_2\windows</PackageRelativeDirectory>
     </FilesToPackage>
     <FilesToPackage Include="C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug\module_5_2.dll" Condition="'$(Configuration)|$(Platform)'=='Win7 Debug|x64'">
       <PackageRelativeDirectory>
