--- a/VS/UhuruAV/UhuruGuard/UhuruGuard.vcxproj.filters
+++ b/VS/UhuruAV/UhuruGuard/UhuruGuard.vcxproj.filters
@@ -49,5 +49,8 @@
     <ClInclude Include="communication.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="UhuruGuard.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
