--- a/VS/UhuruAV/UhuruGuard/UhuruGuard.vcxproj
+++ b/VS/UhuruAV/UhuruGuard/UhuruGuard.vcxproj
@@ -263,6 +263,7 @@
     <ClInclude Include="callbacks.h" />
     <ClInclude Include="communication.h" />
     <ClInclude Include="Struct.h" />
+    <ClInclude Include="UhuruGuard.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
