adding test packages; removing /proc from scan; fixed something in on-access scan

--- a/libuhuru/src/linux/service/Makefile.am
+++ b/libuhuru/src/linux/service/Makefile.am
@@ -1,5 +1,5 @@
 init_ddir = $(sysconfdir)/init.d
-dist_init_d_SCRIPTS = uhuru-scand
+dist_init_d_SCRIPTS = uhuru-scand uhuru-scand-test
 
 defaultdir = $(sysconfdir)/default
 dist_default_DATA = uhuru-scand-def
