--- a/modules/fanotify/conf/Makefile.am
+++ b/modules/fanotify/conf/Makefile.am
@@ -1,4 +1,4 @@
 uhuruconfdir=$(sysconfdir)/uhuru/conf.d
-uhuruconf_DATA=fanotify.conf
+uhuruconf_DATA=fanotify.conf fanotify-test.conf
 
-EXTRA_DIST=fanotify.conf
+EXTRA_DIST=fanotify.conf fanotify-test.conf
