--- a/modules/fanotify/conf/fanotify.conf
+++ b/modules/fanotify/conf/fanotify.conf
@@ -9,5 +9,5 @@
 # watched directory
 watch-dir="/home"
 
-# enable permission event handling
-enable-permission=1
+# enable on-access scan
+enable-on-access=1
