Ajout du filtre rsyslog ainsi que la rotation des logs

--- a/libuhuru/src/linux/service/Makefile.am
+++ b/libuhuru/src/linux/service/Makefile.am
@@ -3,3 +3,10 @@ dist_init_d_SCRIPTS = uhuru-scand uhuru-scand-test
 
 defaultdir = $(sysconfdir)/default
 dist_default_DATA = uhuru-scand-def
+
+logrotatedir = $(sysconfdir)/logrotate.d
+dist_logrotate_DATA = uhuru-av
+
+rsyslogdir = $(sysconfdir)/rsyslog.d
+dist_rsyslog_DATA = 15-uhuru-av.conf
+
