--- a/VS/UhuruAV/ScanClient/ScanClient.vcxproj
+++ b/VS/UhuruAV/ScanClient/ScanClient.vcxproj
@@ -41,8 +41,8 @@
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">
     <LinkIncremental>true</LinkIncremental>
-    <IncludePath>C:\Users\david\Documents\uhuru-av\libuhuru\include\config;C:\Users\david\Documents\uhuru-av\libuhuru\include;$(IncludePath)</IncludePath>
-    <LibraryPath>C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug;$(LibraryPath)</LibraryPath>
+    <IncludePath>$(SolutionDir)..\..\libuhuru\include\config;$(SolutionDir)..\..\libuhuru\include;$(IncludePath)</IncludePath>
+    <LibraryPath>$(SolutionDir)\Debug;C:\Users\david\Documents\uhuru-av\VS\UhuruAV\Debug;$(LibraryPath)</LibraryPath>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
     <LinkIncremental>false</LinkIncremental>
@@ -82,9 +82,11 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="client.c" />
+    <ClCompile Include="log.c" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client.h" />
+    <ClInclude Include="log.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
