--- a/VS/UhuruAV/ScanClient/ScanClient.vcxproj.filters
+++ b/VS/UhuruAV/ScanClient/ScanClient.vcxproj.filters
@@ -18,9 +18,15 @@
     <ClCompile Include="client.c">
       <Filter>Fichiers sources</Filter>
     </ClCompile>
+    <ClCompile Include="log.c">
+      <Filter>Fichiers sources</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="client.h">
+      <Filter>Fichiers d%27en-tête</Filter>
+    </ClInclude>
+    <ClInclude Include="log.h">
       <Filter>Fichiers d%27en-tête</Filter>
     </ClInclude>
   </ItemGroup>
