modif ihm spec :: systray

--- a/.gitignore
+++ b/.gitignore
@@ -22,3 +22,4 @@ VS/UhuruAV/ScanClient/x64/*
 VS/UhuruAV/UhuruGuard Package/Win7Debug/*
 VS/UhuruAV/Win7Debug/*
 out/
+documentation/specs-ihm/tatou-ihm/~$$tatouIHM.~vsdx
