uhuru-av-Windows :: add log in windows event log

--- a/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj
+++ b/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj
@@ -91,6 +91,7 @@
     <ClInclude Include="..\..\..\libuhuru\src\os\dir.h" />
     <ClInclude Include="..\..\..\libuhuru\src\os\file.h" />
     <ClInclude Include="..\..\..\libuhuru\src\os\io.h" />
+    <ClInclude Include="..\..\..\libuhuru\src\os\log.h" />
     <ClInclude Include="..\..\..\libuhuru\src\os\mimetype.h" />
     <ClInclude Include="..\..\..\libuhuru\src\os\string.h" />
   </ItemGroup>
@@ -110,6 +111,7 @@
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
     </ClCompile>
     <ClCompile Include="..\..\..\libuhuru\src\os\windows\file.c" />
+    <ClCompile Include="..\..\..\libuhuru\src\os\windows\log.c" />
     <ClCompile Include="..\..\..\libuhuru\src\os\windows\mimetype.c">
       <CompileAs Condition="'$(Configuration)|$(Platform)'=='Debug|Win32'">CompileAsCpp</CompileAs>
     </ClCompile>
