--- a/libuhuru/src/linux/tools/Makefile.am
+++ b/libuhuru/src/linux/tools/Makefile.am
@@ -3,7 +3,7 @@ AUTOMAKE_OPTIONS=subdir-objects
 bin_PROGRAMS=uhuru-scan uhuru-info
 
 AM_CFLAGS=-I$(top_srcdir)/include -I$(top_srcdir)/src -I$(top_srcdir)/src/linux @GLIB2_CFLAGS@
-LIBS= @GLIB2_LIBS@
+LIBS=$(top_builddir)/src/libcore/libuhuru_core.la @GLIB2_LIBS@ -lmagic
 
 COMMON_SOURCES=\
 ../../utils/getopt.c \
