--- a/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj.filters
+++ b/VS/UhuruAV/libuhuru_core/libuhuru_core.vcxproj.filters
@@ -87,8 +87,8 @@
     <ClInclude Include="..\..\..\libuhuru\src\os\string.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="..\..\..\libuhuru\src\os\log.h">
-      <Filter>Header Files</Filter>
+    <ClInclude Include="..\..\..\libuhuru\include\libuhuru\libcore\log.h">
+      <Filter>Header Files\libcore</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -137,8 +137,8 @@
     <ClCompile Include="..\..\..\libuhuru\src\libcore\error.c">
       <Filter>Source Files\libcore</Filter>
     </ClCompile>
-    <ClCompile Include="..\..\..\libuhuru\src\os\windows\log.c">
-      <Filter>Source Files\os\windows</Filter>
+    <ClCompile Include="..\..\..\libuhuru\src\libcore\log.c">
+      <Filter>Source Files\libcore</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
